settings: fix privacy section alignment

--- a/app/components/views/SettingsPage/Settings.module.css
+++ b/app/components/views/SettingsPage/Settings.module.css
@@ -85,11 +85,13 @@
   order: 3;
 }
 
-.group.privacy .columnWrapper {
+.wrapper group.privacy .columnWrapper {
   padding: 40px 40px 10px 40px;
 }
 
-.group.privacy .columnWrapper .column {
+.wrapper .group .columnWrapper .column,
+.wrapper .group.privacy .columnWrapper .column:nth-of-type(1),
+.wrapper .group.privacy .columnWrapper .column:nth-of-type(3) {
   max-width: 100%;
   width: 100%;
 }
